--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.2
+Date: 2024. 12. 31
+  Info:
+    - Fix bugs with crafting speed
+    - Make space-age truly optional, crafting ingredients and surface conditions are adjusted
+
+---------------------------------------------------------------------------------------------------
 Version: 1.0.1
 Date: 2024. 12. 20
   Info:
